Renamed package name.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "jp.ac.titech.itpro.sdl.phototaker"
+        applicationId "jp.ac.titech.itpro.sdl.photonotes"
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
